[package]
name = "keymui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.12.1", features = ["lazy", "canvas"]}
iced_aw = {version = "0.8.0", default-features = false, features = ["card", "modal"]}
km = {package = "keymeow", git = "https://github.com/semilin/keymeow"}
kc = {package = "keycat", git = "https://github.com/semilin/keycat"}
rfd = {version = "0.11.4"}
directories = "5.0.1"
serde_json = "1.0.104"
serde = { version = "1.0.188", features = ["serde_derive"] }
rmp-serde = "1.1.2"
color-eyre = { version = "0.6.3", default-features = false }
minreq = {version = "2.11.2", features = ["https-rustls", "json-using-serde"] }

[profile.dev.package.keycat]
opt-level = 3
